--- a/style.css
+++ b/style.css
@@ -9,23 +9,13 @@
     font-size: 18px;
     font-weight: none;
     font-family: Kumbh Sans, sans-serif;
-}
-
-body{
     margin: 0;
     padding: 0;
     background-color: hsl(185, 75%, 39%);
     overflow: hidden;
-}
-
-.circle01{
-    background-position: top left;
-    width: 50%;
-}
-
-.circle02{
-    background-position: bottom right;
-    width: 50%;
+    background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
+    background-repeat: no-repeat;
+    background-position: -10px -400px, 920px 400px;
 }
 
 
@@ -41,6 +31,7 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     border-radius: 15px;
+    
 }
 
 #box .card{
@@ -50,7 +41,7 @@ body{
     bottom: 0;
     z-index: 0;
     border-radius: 15px 15px 0 0;
- 
+
 }
 
 #box .logo{
@@ -65,28 +56,34 @@ body{
 .nomeinfo{
     width: 100%;
     text-align: center;
+    font-size: 17px;
+    position: relative;
+    bottom: 40px;
+    line-height: 1.6
+
 
 }
 
-.follow{
-    display: block;
-    width: 33%;
-    text-align: left;
-    font-size: 15px;
-}
-
-
-.likes{
-    width: 33%;
+#info{
+    width: 85%;
+    display: flex;
     text-align: center;
-    font-size: 15px;
-
+    justify-content: space-around;
+    position: relative;
+    font-size: 17px;
+    bottom: 25px;
+   
 }
 
-.photos{
-    width: 33%;
-    text-align: right;
-    font-size: 15px;
-
+.attribution{
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, -90%);
 }
-    
+
+
+
+
+
