--- a/style.css
+++ b/style.css
@@ -1,21 +1,47 @@
-@font-face{
-    font-family: Kumbh Sans;
-    src: url(https://fonts.google.com/specimen/Kumbh+Sans);
+*{
+    font-family: 'Kumbh Sans', sans-serif;
 }
+
+#main::before , #main::after{
+    content: "";
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    
+    
+}
+
+#main::before{
+    background-image: url(./images/bg-pattern-top.svg);
+    background-repeat: no-repeat;
+    background-position: top left;
+    transform: translate(0%, -50%)
+}
+
+
+#main::after{
+    background-image: url(./images/bg-pattern-bottom.svg);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    transform: translate(0%, 50%);
+    z-index: -1;
+   
+}
+
 
 #main{
     width: 1024px;
     height: 0px;
     font-size: 18px;
-    font-weight: none;
+    font-weight: normal;
     font-family: Kumbh Sans, sans-serif;
     margin: 0;
     padding: 0;
     background-color: hsl(185, 75%, 39%);
     overflow: hidden;
-    background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
+    /*background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
     background-repeat: no-repeat;
-    background-position: -10px -400px, 920px 400px;
+    background-position: -10px -400px, 920px 400px;*/
 }
 
 
@@ -63,6 +89,18 @@
 
 
 }
+
+.nomeinfo::after{
+    content: "";
+    position: relative;
+    top: 20px;
+    width: 350px;
+    margin: 0 auto;
+    height: 0.5px;
+    display: block;
+    background-color: #ccc;
+}
+
 
 #info{
     width: 85%;
