--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 #main::before , #main::after{
     content: "";
     position: absolute;
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     
     
 }
@@ -15,7 +15,7 @@
     background-image: url(./images/bg-pattern-top.svg);
     background-repeat: no-repeat;
     background-position: top left;
-    transform: translate(0%, -50%)
+    transform: translate(-10%, -50%)
 }
 
 
@@ -23,7 +23,7 @@
     background-image: url(./images/bg-pattern-bottom.svg);
     background-repeat: no-repeat;
     background-position: bottom right;
-    transform: translate(0%, 50%);
+    transform: translate(10%, 50%);
     z-index: -1;
    
 }
@@ -34,7 +34,7 @@
     height: 0px;
     font-size: 18px;
     font-weight: normal;
-    font-family: Kumbh Sans, sans-serif;
+    font-family: 'Kumbh Sans', sans-serif;
     margin: 0;
     padding: 0;
     background-color: hsl(185, 75%, 39%);
