--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     font-family: 'Kumbh Sans', sans-serif;
 }
 
-#main::before , #main::after{
+/*#main::before , #main::after{
     content: "";
     position: absolute;
     width: 100%;
@@ -13,20 +13,22 @@
 
 #main::before{
     background-image: url(./images/bg-pattern-top.svg);
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: top left;
-    transform: translate(-10%, -50%)
+    background-position: bottom right;
+    transform: translate(-50%, -50%)
 }
 
 
 #main::after{
     background-image: url(./images/bg-pattern-bottom.svg);
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom right;
-    transform: translate(10%, 50%);
+    transform: translate(0%, 50%);
     z-index: -1;
    
-}
+}*/
 
 
 #main{
@@ -39,9 +41,9 @@
     padding: 0;
     background-color: hsl(185, 75%, 39%);
     overflow: hidden;
-    /*background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
+    background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
     background-repeat: no-repeat;
-    background-position: -10px -400px, 920px 400px;*/
+    background-position: top -20vw left -10vh, bottom -70vw right -10vh;
 }
 
 
@@ -120,7 +122,6 @@
     bottom: 0;
     transform: translate(-50%, -90%);
 }
-
 
 
 
